# Finny-

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  vercel.json
api/: index.py
backend/: __init__.py  app.py  config.py  database.py  finny.db
backend/models/: __init__.py  achievement.py  budget.py  mission.py  profile.py  purchase.py  streak.py  user.py
backend/repositories/: achievement_repository.py  budget_repository.py  mission_repository.py  profile_repository.py  purchase_repository.py  streak_repository.py  user_repository.py
backend/routes/: auth_routes.py  budget_routes.py  dashboard_routes.py  gamification_routes.py  profile_routes.py  purchase_routes.py  stats_routes.py  tips_routes.py
backend/services/: auth_service.py  budget_service.py  dashboard_service.py  gamification_service.py  profile_service.py  purchase_service.py  tips_service.py
backend/utils/: auth_decorators.py  validators.py
docs/: MER_fisico.md  MER_logico.md  diccionario_datos.md
frontend/: app.js  index.html
migrations/: 001_init_mysql.sql
tests/: conftest.py  test_api_integration.py  test_auth_service.py  test_dashboard_service.py  test_models.py  test_performance.py  test_purchase_service.py
transversal/: __init__.py  constants.py
