[project]
name = "finny"
version = "3.0.0"
description = "FINNY — Student Finance App"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "Werkzeug==2.3.7",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.5",
    "PyMySQL==1.1.0",
    "cryptography==41.0.7",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "transversal*", "api*"]
